--- a/DeskTile/MainWindow.xaml
+++ b/DeskTile/MainWindow.xaml
@@ -1,8 +1,9 @@
-﻿<Window x:Class="DeskTile.MainWindow"
+﻿<Window x:Name="RenderCanvas" x:Class="DeskTile.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="525" Loaded="RenderCanvas_Loaded" Background="Transparent" ShowInTaskbar="False" WindowStyle="None" AllowsTransparency="True">
     <Grid>
-        
+        <Image Source="Capture.PNG" />
     </Grid>
+    
 </Window>
