--- a/DeskTile/MainWindow.xaml
+++ b/DeskTile/MainWindow.xaml
@@ -1,10 +1,16 @@
 ﻿<Window x:Name="RenderCanvas" x:Class="DeskTile.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525" Loaded="RenderCanvas_Loaded" Background="Transparent" ShowInTaskbar="False" WindowStyle="None" AllowsTransparency="True">
-    <Grid>
-        <Image Source="Capture.PNG" />
-        <Button Content="&#xD;&#xA;Button" HorizontalAlignment="Left" Margin="45,85,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        xmlns:l="clr-namespace:DeskTileWithSize;assembly=DeksTileWithSize"
+        
+        
+        Title="MainWindow" WindowState="Maximized" Height="350" Width="525" Loaded="RenderCanvas_Loaded" Background="Transparent" ShowInTaskbar="False" WindowStyle="None" AllowsTransparency="True" StateChanged="RenderCanvas_StateChanged">
+
+    <Grid Name="sample">
+
+        <l:TileWithSize></l:TileWithSize>
+     
+
     </Grid>
-    
+
 </Window>
