--- a/DeskIcon/DeskIcon.xaml
+++ b/DeskIcon/DeskIcon.xaml
@@ -1,21 +1,21 @@
-﻿<UserControl x:Class="DeskIcon.DeskIcon"
+﻿<UserControl x:Class="DeskIcon.DeskIconClass"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              
-             mc:Ignorable="d" 
+             mc:Ignorable="d"  SnapsToDevicePixels="True"
              >
     
-    <Grid Margin="5,5,5,5">
+    <Grid SnapsToDevicePixels="True" Margin="-10">
 
         <StackPanel Name="Container" Width="65" Height="80" >
             
-            <Image Name="IconShow" Height="48" Width="48" DockPanel.Dock="Top" VerticalAlignment="Center"  HorizontalAlignment="Center"  />
-                <TextBlock SnapsToDevicePixels="True" VerticalAlignment="Bottom" TextAlignment="Center" HorizontalAlignment="Stretch" DockPanel.Dock="Bottom" TextWrapping="Wrap"  Name="FileName"  FontSize="12" FontFamily="Arial"  Foreground="White">
+            <Image Name="IconShow" SnapsToDevicePixels="True" RenderOptions.BitmapScalingMode="HighQuality"  Height="52" Width="52" DockPanel.Dock="Top" VerticalAlignment="Center"  HorizontalAlignment="Center"  />
+                <TextBlock SnapsToDevicePixels="True" RenderOptions.BitmapScalingMode="Linear"  VerticalAlignment="Bottom" TextAlignment="Center" HorizontalAlignment="Stretch" DockPanel.Dock="Bottom" TextWrapping="Wrap"  Name="FileName"  FontSize="12" FontFamily="Arial"  Foreground="White">
                
                     <TextBlock.Effect>
-                    <DropShadowEffect Color="Black" ShadowDepth="1" Direction="300" Opacity="1" BlurRadius="2"></DropShadowEffect>
+                    <DropShadowEffect Color="Black" RenderingBias="Quality" ShadowDepth="1" Direction="300" Opacity="1" BlurRadius="2"></DropShadowEffect>
                  
                 </TextBlock.Effect>
                 
